Completed ngo listing, doctor listing, ngo profile, doctor profile

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,10 +33,10 @@
                         <a class="nav-link" href="shAdoption.php">Adoption</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ngoList.html">NGOs</a>
+                        <a class="nav-link" href="{% url 'profiles:allngo' %}">NGOs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="docList.html">Connect Doctor</a>
+                        <a class="nav-link" href="{% url 'profiles:alldoctors' %}">Connect Doctor</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="feed.html">Blog</a>
